WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35793
media/video-preload.html fails
https://bugs.webkit.org/show_bug.cgi?id=35793
Summary
media/video-preload.html fails
Eric Carlson
Reported
2010-03-05 09:27:24 PST
The new 'preload' functional test fails, "preload=none" loads enough to fire the 'loadedmetadata' event. I don't know enough about how your media engine works to attempt a fix.
Attachments
respect preload attribute when loading
(5.05 KB, patch)
2010-03-12 11:55 PST
,
Gustavo Noronha (kov)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2010-03-05 09:33:29 PST
Added to skip list in
r55588
.
Gustavo Noronha (kov)
Comment 2
2010-03-12 11:52:30 PST
***
Bug 36068
has been marked as a duplicate of this bug. ***
Gustavo Noronha (kov)
Comment 3
2010-03-12 11:55:20 PST
Created
attachment 50618
[details]
respect preload attribute when loading
Gustavo Noronha (kov)
Comment 4
2010-03-12 12:11:50 PST
Landed as
r55927
.
Dirk Schulze
Comment 5
2010-03-12 22:57:25 PST
(In reply to
comment #4
)
> Landed as
r55927
.
This broke the bots. You call url without giving it to commitLoad().
Dirk Schulze
Comment 6
2010-03-13 05:44:54 PST
Rolled the patch out in
r55962
.
Philippe Normand
Comment 7
2010-03-15 03:17:31 PDT
***
Bug 30378
has been marked as a duplicate of this bug. ***
Gustavo Noronha (kov)
Comment 8
2010-03-15 08:11:55 PDT
(In reply to
comment #6
)
> Rolled the patch out in
r55962
.
Thanks for catching it, and cleaning up the mess! I only waited for the release bot. That'll teach me =D.
Gustavo Noronha (kov)
Comment 9
2010-03-15 08:20:33 PDT
Re-landed with the build fixage as
r55995
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug