2010-03-12  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

Reviewed by Eric Carlson.

        media/video-preload.html fails
        https://bugs.webkit.org/show_bug.cgi?id=35793

        Only effectively load, and start buffering when playing, or when
        the preload attribute is set.

        Test: media/video-preload.html

        * platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::MediaPlayerPrivate::MediaPlayerPrivate):
        (WebCore::MediaPlayerPrivate::load):
        (WebCore::MediaPlayerPrivate::commitLoad):
        (WebCore::MediaPlayerPrivate::prepareToPlay):
        (WebCore::MediaPlayerPrivate::setPreload):
        * platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h:

Canonical link: https://commits.webkit.org/47222@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55927 268f45cc-cd09-0410-ab3c-d52691b4dbfc