WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h
@@ -63,9 +63,11 @@ class MediaPlayerPrivate : public MediaPlayerPrivateInterface {
             bool hasAudio() const;
 
             void load(const String &url);
+            void commitLoad();
             void cancelLoad();
             bool loadNextLocation();
 
+            void prepareToPlay();
             void play();
             void pause();
 
@@ -167,6 +169,8 @@ class MediaPlayerPrivate : public MediaPlayerPrivateInterface {
             guint m_fillTimeoutId;
             float m_maxTimeLoaded;
             int m_bufferingPercentage;
+            MediaPlayer::Preload m_preload;
+            bool m_delayingLoad;
     };
 }
 
